--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "username": "ropostgresot",
+    "username": "postgres",
     "password": "endencre",
     "database": "fin_2021",
     "host": "127.0.0.1",
